# cloud-sync-tuner

./: .editorconfig  .gitignore  ARCHITECTURE.adoc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  Containerfile.alpine-fallback  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  LICENSE.txt  META.scm  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  ROADMAP.adoc  RSR_OUTLINE.adoc  SECURITY-REVIEW.md  SECURITY.md  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  cloud_sync_tuner.gpr  compose.yaml  eclexiaiser.toml  flake.nix  guix.scm  install.sh  justfile  llm-warmup-dev.md  llm-warmup-user.md  nerdctl-compose.yaml  selur-compose.toml  setup.sh  stapeln.toml
.claude/: CLAUDE.md
.hypatia/: activity.jsonl  last-visit.json
.laminar/: cloud-sync-tuner.run
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm  TRUST.contractile
.well-known/: security.txt
audit/: cloud-sync-tuner.rules
aur/: .SRCINFO  PKGBUILD  submit-to-aur.sh
config/: config.toml.example  schema.ncl
docs/: CITATIONS.adoc  tech-debt-2026-05-26.md
dolphin-extension/: README.md  cloud_sync_overlay.desktop
man/: cloud-sync-tuner.1
nautilus-extension/: cloud_sync_overlay.py
overlay-daemon/: Cargo.toml  cloud-sync-overlay.service
overlay-daemon/src/: main.rs
packaging/: README.md
scripts/: cloud-sync-status  config-export.sh  config-import.sh  (+1 more)
tray-daemon/: Cargo.toml  cloud-sync-tray.service
tray-daemon/src/: main.rs
(+56 files in other folders)
