# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "cloud-sync-overlay"
version = "0.1.0"
edition = "2021"
description = "File manager overlay icon daemon for rclone cloud mounts"
license = "AGPL-3.0-or-later"
authors = ["hyperpolymath"]
repository = "https://github.com/hyperpolymath/cloud-sync-tuner"

[dependencies]
tokio = { version = "1", features = ["full"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
notify = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
xdg = "2.5"
gio = "0.20"

[profile.release]
lto = true
strip = true
